--- a/index.html
+++ b/index.html
@@ -59,9 +59,11 @@
          Dinner :- 7:00 PM @ Centenary Auditorium, Waltair Club
       </p>
       <div class="actions">
-        <a href="https://maps.app.goo.gl/UWXSmQzQ9onqF1KdA" target="_blank">
+        <!--
+         <a href="https://maps.app.goo.gl/UWXSmQzQ9onqF1KdA" target="_blank">
           <div class="venue">Venue Directions</div>
-        </a>
+        </a> 
+         -->
         <a href="./assets/img/wedding_card.png" target="_blank">
           <div class="venue">View Wedding Card</div>
         </a>
@@ -70,13 +72,12 @@
         </a>
       </div>
 
-      <p class="happiness">Join us in our happiness & bless the newlyweds!</p>
+      <p class="happiness">Share our happiness & bless the newlyweds!</p>
       <p class="dance-med1">
          #harshagothisbunny
       </p>
       <p class="footer">
-         We'd be delighted to celebrate these auspicious moments of our family with you! <br>
-         <!--Just a ping away for any queries: +91 9949330555 & +91 9959997313 -->
+      Respecting the need to follow COVID norms, we would you to join us virtually to celebrate these auspicious moments!
          <span></span>
       </p>
       <!-- partial -->
