--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <div class="venue">View Wedding Card</div>
         </a>
         <a href="https://www.youtube.com/watch?v=xQ34XFWSBuc" target="_blank">
-          <div class="venue live">Live Link</div>
+          <div class="venue live">&nbsp;&nbsp;&nbsp;Live Link&nbsp;&nbsp;&nbsp;</div>
         </a>
       </div>
 
