--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
    </div>
 
       <div id="time"></div>
-      <!-- 
+      
       <p class="dance-med">
-         Dinner :- 7:00 PM @ Centenary Auditorium, Waltair Club
+        <!--  Dinner :- 7:00 PM @ Centenary Auditorium, Waltair Club --> &nbsp;
       </p>
-      -->
+      
       <div class="actions">
         <!--
          <a href="https://maps.app.goo.gl/UWXSmQzQ9onqF1KdA" target="_blank">
