--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
          #harshagothisbunny
       </p>
       <p class="footer">
-      Respecting the need to follow COVID norms, we would you to join us virtually to celebrate these auspicious moments!
+      Respecting the need to follow COVID norms, we would like you to join us virtually to celebrate these auspicious moments!
          <span></span>
       </p>
       <!-- partial -->
