--- a/index.html
+++ b/index.html
@@ -74,12 +74,12 @@
         </a>
       </div>
 
-      <p class="happiness">Share our happiness & bless the newlyweds!</p>
+      <p class="happiness">Respecting the need to follow COVID norms, we would like you to join us virtually to celebrate these auspicious moments!</p>
       <p class="dance-med1">
          #harshagothisbunny
       </p>
       <p class="footer">
-      Respecting the need to follow COVID norms, we would like you to join us virtually to celebrate these auspicious moments!
+      Share our happiness & bless the newlyweds!
          <span></span>
       </p>
       <!-- partial -->
